styles/Home.module.css
.container {
  background-color: rgb(12, 21, 31);
  color: rgba(185, 215, 255, .5);
  display: flex;
  flex-flow: row wrap;
  font-family: "Mulish","Helvetica Neue",Arial,sans-serif;
  height: 100vh;
  overflow-y: scroll;
  scroll-snap-type: y proximity;
}

.navigation {
  align-self: center;
  font-size: .8em;
  font-weight: bold;
  position: fixed;
  width: 12em;
}

@media (pointer: coarse) {
  .navigation {
    display: none;
  }
}

.menu {
  list-style: none;
  padding-left: 2em;
}

.menu_item {
  margin: 2em 0;
}

.button {
  border: 1.5px solid currentColor;
  border-radius: 5px;
  font-weight: normal;
  line-height: 1;
  margin-top: 1em;
  padding: .3em .5em .45em;
}

.main {
  align-items: center;
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: center;
  padding: 0;
}

.footer {
  align-self: flex-end;
  line-height: 1;
  margin-left: 2em;
  padding: 2rem 0 5vh;
  width: 12em;
}

@media (min-width: 768px) {
  .footer {
    position: fixed;
  }

  .photo {
    padding-left: 10em;
  }

  .location {
    width: 8em;
  }
}

.footer a {
  flex-grow: 1;
  font-weight: bold;
  justify-content: center;
}

.photo {
  align-items: center;
  display: flex;
  flex-flow: column;
  justify-content: center;
  height: 100vh;
  scroll-snap-align: start;
  width: 100vw;
}

.image {
  max-height: 90vh;
  max-width: 90vw;
}

.location {
  align-self: flex-start;
  height: 0;
  justify-self: flex-start;
  margin: 5vh 0 -5vh 2em;
}

